feat: refactor from xbear-ui

--- a/src/components/Button/style.scss
+++ b/src/components/Button/style.scss
@@ -1,6 +1,6 @@
-@import "@/styles/mixin";
-@import "@/styles/variables";
-@import "@/styles/reboot";
+@import '@/styles/mixin';
+@import '@/styles/variables';
+@import '@/styles/reboot';
 
 .xbear-btn {
   position: relative;
@@ -17,12 +17,7 @@
   box-shadow: $btn-box-shadow;
   cursor: pointer;
   transition: $btn-transition;
-  @include button-size(
-    $btn-padding-y,
-    $btn-padding-x,
-    $btn-font-size,
-    $border-radius
-  );
+  @include button-size($btn-padding-y, $btn-padding-x, $btn-font-size, $border-radius);
 
   &.disables,
   &[disabled] {
@@ -37,21 +32,11 @@
 }
 
 .xbear-btn-lg {
-  @include button-size(
-    $btn-padding-y-lg,
-    $btn-padding-x-lg,
-    $btn-font-size-lg,
-    $btn-border-radius-lg
-  );
+  @include button-size($btn-padding-y-lg, $btn-padding-x-lg, $btn-font-size-lg, $btn-border-radius-lg);
 }
 
 .xbear-btn-sm {
-  @include button-size(
-    $btn-padding-y-sm,
-    $btn-padding-x-sm,
-    $btn-font-size-sm,
-    $btn-border-radius-sm
-  );
+  @include button-size($btn-padding-y-sm, $btn-padding-x-sm, $btn-font-size-sm, $btn-border-radius-sm);
 }
 
 .xbear-btn-primary {
@@ -91,14 +76,7 @@
 .xbear-btn-ghost {
   box-shadow: none;
   user-select: none;
-  @include button-style(
-    $transparent,
-    $transparent,
-    $font-color,
-    $transparent,
-    $primary,
-    $primary
-  );
+  @include button-style($transparent, $transparent, $font-color, $transparent, $primary, $primary);
 }
 
 .xbear-btn-circle-lg {
@@ -116,14 +94,7 @@
 }
 
 .xbear-btn-default {
-  @include button-style(
-    $white,
-    $gray-400,
-    $body-color,
-    $white,
-    $primary,
-    $primary
-  );
+  @include button-style($white, $gray-400, $body-color, $white, $primary, $primary);
 }
 
 .xbear-btn-link {
