--- a/src/components/Card/style.scss
+++ b/src/components/Card/style.scss
@@ -1,6 +1,6 @@
-@import "@/styles/mixin";
-@import "@/styles/variables";
-@import "@/styles/reboot";
+@import '@/styles/mixin';
+@import '@/styles/variables';
+@import '@/styles/reboot';
 
 $xbear-card-header-font-size: 16px;
 $xbear-card-header-padding: 18px 20px;
