--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,14 +1,14 @@
 // config
-@import "variables";
+@import 'variables';
 
 // layout
-@import "reboot";
+@import 'reboot';
 
 // mixin
-@import "mixin";
+@import 'mixin';
 
 // animation
-@import "animation";
+@import 'animation';
 
 // // button
 // @import "../components/Button/style";
