--- a/src/components/Icon/style.scss
+++ b/src/components/Icon/style.scss
@@ -1,6 +1,6 @@
-@import '../../styles/mixin';
-@import '../../styles/variables';
-@import '../../styles/reboot';
+@import '@/styles/mixin';
+@import '@/styles/variables';
+@import '@/styles/reboot';
 
 @each $key, $val in $theme-colors {
   .icon-#{$key} {
