--- a/src/components/Menus/style.scss
+++ b/src/components/Menus/style.scss
@@ -28,8 +28,7 @@
     &.is-active,
     &:hover {
       color: $menu-item-active-color;
-      border-bottom: $menu-item-active-border-width solid
-        $menu-item-active-color;
+      border-bottom: $menu-item-active-border-width solid $menu-item-active-color;
     }
   }
 
