--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -51,12 +51,7 @@
   border-color: $border;
 }
 
-@mixin zoom-animation(
-  $direction: 'top',
-  $scaleStart: scaleY(0),
-  $scaleEnd: scaleY(1),
-  $origin: center top
-) {
+@mixin zoom-animation($direction: 'top', $scaleStart: scaleY(0), $scaleEnd: scaleY(1), $origin: center top) {
   .zoom-in-#{$direction}-enter {
     transform: $scaleStart;
     opacity: 0;
@@ -66,8 +61,7 @@
     transform: $scaleEnd;
     transform-origin: $origin;
     opacity: 1;
-    transition: transform 300ms cubic-bezier(0.23, 1, 0.32, 1) 100ms,
-      opacity 300ms cubic-bezier(0.23, 1, 0.32, 1) 100ms;
+    transition: transform 300ms cubic-bezier(0.23, 1, 0.32, 1) 100ms, opacity 300ms cubic-bezier(0.23, 1, 0.32, 1) 100ms;
   }
 
   .zoom-in-#{$direction}-exit {
@@ -78,8 +72,7 @@
     transform: $scaleStart;
     transform-origin: $origin;
     opacity: 0;
-    transition: transform 300ms cubic-bezier(0.23, 1, 0.32, 1) 100ms,
-      opacity 300ms cubic-bezier(0.23, 1, 0.32, 1) 100ms;
+    transition: transform 300ms cubic-bezier(0.23, 1, 0.32, 1) 100ms, opacity 300ms cubic-bezier(0.23, 1, 0.32, 1) 100ms;
   }
 }
 
