--- a/src/components/Message/style.scss
+++ b/src/components/Message/style.scss
@@ -1,6 +1,6 @@
-@import '../../styles/mixin';
-@import '../../styles/variables';
-@import '../../styles/reboot';
+@import '@/styles/mixin';
+@import '@/styles/variables';
+@import '@/styles/reboot';
 
 .xbear-message {
   position: fixed;
