--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,7 +17,7 @@
 // @import "../components/Alerts/style";
 
 // // menu
-// @import "../components/Menus/style";
+// @import '../components/Menus/style';
 
 // // icon
 // @import '../components/Icon/style';
