--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -211,7 +211,7 @@ $btn-font-family: $font-family-base !default;
 $btn-font-size: $font-size-base !default;
 $btn-line-height: $line-height-base !default;
 
-//不同大小按钮的 padding 和 font size
+// 不同大小按钮的 padding 和 font size
 $btn-padding-y-sm: 0.3rem !default;
 $btn-padding-x-sm: 0.75rem !default;
 $btn-font-size-sm: $font-size-sm !default;
@@ -219,6 +219,10 @@ $btn-font-size-sm: $font-size-sm !default;
 $btn-padding-y-lg: 0.35rem !default;
 $btn-padding-x-lg: 1rem !default;
 $btn-font-size-lg: $font-size-lg !default;
+
+// 圆形的半径
+$btn-circle-lg: $font-size-lg * 2.5 !default;
+$btn-circle-sm: $font-size-sm * 2.5 !default;
 
 // 按钮边框
 $btn-border-width: $border-width !default;
