--- a/src/components/message/style.scss
+++ b/src/components/message/style.scss
@@ -4,7 +4,7 @@
 
 .xbear-message {
   position: fixed;
-  top: 10vh;
+  top: 5vh;
   left: 50vw;
   transform: translateX(-50%);
 
@@ -16,7 +16,7 @@
     background-color: $white;
     border: $border-width solid $border-color;
     border-radius: $border-radius;
-    box-shadow: $box-shadow-sm;
+    box-shadow: $box-shadow;
   }
 
   &-content {
@@ -26,6 +26,7 @@
     width: 100%;
     height: 100%;
     padding: 5px;
+    gap: 4px;
 
     > span {
       display: flex;
